works, but messy

--- a/kalite/distributed/templates/distributed/base.html
+++ b/kalite/distributed/templates/distributed/base.html
@@ -286,10 +286,12 @@
                   </div>
               </div>
           </div>
+          <kmap></kmap>
           {# End Header / Navbar #}
 
             {# Body #}
             <div id="content-container" class="container">
+              <!-- <kmap></kmap> -->
                 {% block outer_content %}
                     {% block precontent %}
                         {% include "distributed/partials/_messages.html" %}
