avoid inheriting opacity from bootstrap style

--- a/kalite/playlist/templates/playlist/view_playlist.html
+++ b/kalite/playlist/templates/playlist/view_playlist.html
@@ -103,7 +103,7 @@
 {% endblock headjs %}
 
 {% block content %}
-
+    <div id="myfade"></div>
     <div id="sidebar-container"></div>
 
     <div id="content-area">
